nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-chaos
  name: nginx-chaos
  namespace: chaos
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-chaos
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nginx-chaos
    spec:
      containers:
      - image: 985173093618.dkr.ecr.us-east-1.amazonaws.com/nginx
        imagePullPolicy: IfNotPresent
        name: prison-mike-maintenance
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            memory: 50Mi
            cpu: 100m
          requests:
            memory: 50Mi
            cpu: 100m
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - name: chaos-health
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
      volumes:
        - name: chaos-health
          configMap:
              name: nginxhealth
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - nginx-chaos
            topologyKey: "kubernetes.io/hostname"
