nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-chaos
  namespace: chaos
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-chaos
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
