nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
  name: nginx-chaos
  namespace: chaos
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: nginx-chaos
          servicePort: 80
        path: /chaos2
status:
  loadBalancer:
    ingress:
    - {}
